--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,11 @@ repositories {
 }
 
 dependencies {
-/*    // Use JUnit test framework.
+    // Use JUnit test framework.
     testImplementation libs.junit
 
     // This dependency is used by the application.
-    implementation libs.guava*/
+    implementation libs.guava
 
     implementation 'org.ow2.asm:asm:9.7'
     implementation 'org.ow2.asm:asm-tree:9.7'
@@ -27,7 +27,9 @@ dependencies {
     implementation group: 'org.ow2.asm', name: 'asm-util', version: '9.7'
 
     implementation 'com.github.7orivorian:RuntimeProfiler:1.1.0'
+
     implementation 'com.github.OmniModLoader:ASMHelper:2.2.5'
+    implementation 'com.github.OmniModLoader:Lumina:1.0.0'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
