--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,22 @@
+//file:noinspection GroovyAssignabilityCheck // for testing only
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'java'
     id 'maven-publish'
 }
 
-group = 'org.omnimc.trix'
-version = '0.0.4'
+apply from: 'gradle/dependencies.gradle'
 
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
-    maven { url "https://jitpack.io" }
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            groupId = 'org.omnimc.trix'
+            artifactId = 'TrixRemapper'
+            version = '0.0.6'
+        }
+    }
 }
-
-dependencies {
-    // Use JUnit test framework.
-    testImplementation libs.junit
-
-    // This dependency is used by the application.
-    implementation libs.guava
-
-    implementation 'org.ow2.asm:asm:9.7'
-    implementation 'org.ow2.asm:asm-tree:9.7'
-    implementation 'org.ow2.asm:asm-analysis:9.7'
-    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '9.7'
-    implementation group: 'org.ow2.asm', name: 'asm-util', version: '9.7'
-
-    implementation 'com.github.7orivorian:RuntimeProfiler:1.1.0'
-
-    implementation 'com.github.OmniModLoader:ASMHelper:2.2.5'
-    implementation 'com.github.OmniModLoader:Lumina:18ece749'
-
-}
-
-// Apply a specific Java toolchain to ease working on different environments.
