--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ apply from: 'gradle/dependencies.gradle'
 sourceCompatibility = '17'
 targetCompatibility = '17'
 
+tasks.register('sourcesJar', Jar) {
+    from sourceSets.main.allSource
+    archiveClassifier.set('sources')
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -20,3 +25,5 @@ publishing {
         }
     }
 }
+
+jar.dependsOn sourcesJar
